--- a/views/expenses/pettyCash/pettyCash.ejs
+++ b/views/expenses/pettyCash/pettyCash.ejs
@@ -95,7 +95,7 @@ $(document).ready(function(){
     var html = '';
     html += '<tr>';
     html += '<td>'+cnt+'</td>';
-    html += '<td><input type="text" name="bill_no" class="form-control" /></td>';
+    html += '<td><input type="text" name="bill_no" class="form-control" value=" " /></td>';
     html += '<td><input type="date" name="bill_date" class="form-control " /></td>';
     html += '<td><select id="activity_code'+cnt+'"  name="projectTask"  class="form-control item_unit"></select></td>';
     html += '<td><textarea  name="desc" class="form-control"></textarea></td>';
