--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -34,7 +34,7 @@
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false"> Manage Approvals</a>
               <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-              <a class="dropdown-item" href="#">PLD Form Approval</a>
+              <a class="dropdown-item" href="/approvals/pldFormApprovals">PLD Form Approval</a>
               <a class="dropdown-item" href="/approvals/expenseApprovals">Expense Approval</a>
               <a class="dropdown-item" href="#">Procurement Approval</a>
               </div>
