--- a/views/expenses/tourBillClaims/ConveyanceView.ejs
+++ b/views/expenses/tourBillClaims/ConveyanceView.ejs
@@ -44,7 +44,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Approval Comment</h5>
+              <h5 class="modal-title">Conveyance Charges View</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -59,7 +59,6 @@
             </table>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" id="submitForApproval" >Submit</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
           </div>
