--- a/views/expenses/tourBillClaims/airRailBusListView.ejs
+++ b/views/expenses/tourBillClaims/airRailBusListView.ejs
@@ -47,7 +47,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Approval Comment</h5>
+          <h5 class="modal-title">AirRailBus View</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -62,7 +62,6 @@
         </table>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" id="submitForApproval" >Submit</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
