--- a/views/expenses/tourBillClaims/telephoneFoodChargeView.ejs
+++ b/views/expenses/tourBillClaims/telephoneFoodChargeView.ejs
@@ -45,7 +45,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Approval Comment</h5>
+              <h5 class="modal-title">Telephone &amp; Food View</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -60,7 +60,6 @@
             </table>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" id="submitForApproval" >Submit</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
           </div>
