--- a/views/loginDashboard/pldReports.ejs
+++ b/views/loginDashboard/pldReports.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/navbar %>
 
+<% if(showExcelReport){ %>
 
 <div class="row mt-5">
         <div class="col-md-6 m-auto">
@@ -7,7 +8,7 @@
                 <label for="validationTooltip03">Select Project</label>
                     <select class="custom-select custom-select-sm form-control" id="projectname" name="projectname">'+
                             <option value="" >Select</option>
-                            <option value="a030p0000018ScOAAU" >Project 6</option>
+                         <!--   <option value="a030p0000018ScOAAU" >Project 6</option>  -->
                     </select>
                
                 </br/>
@@ -22,12 +23,14 @@
             </div>
         </div>
 </div>
-
+<% } %>
 
 <br/>
 
+<!-- Pld Forms Modal -->
+
 <div class="row mt-5">
-    <div class="col-md-6 m-auto">
+    <div class="col-md-8 m-auto">
       <div class="card card-body">
           <h4><center>Available PLD Forms </center></h4>
           <div  class="table-responsive">
@@ -44,8 +47,56 @@
   </div>
   
 
+  <!-- Responses Modal -->
+  <div id="responsesModal" class="modal fade bs-example-modal-xl" tabindex ="-1" role="dialog" aria-labelledby="myLargeModalLabel" >
+        <div class="modal-dialog modal-xl" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="createTaskModal">View Responses</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="table-responsive">
+                  <div id="spinner">
+                     <center> <img src="/spinner-gif-transparent-background-14.gif" />  </center>
+                  </div>
+                <table id="responsesTable" class="table ">
+      
+                </table>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+             
+            </div>
+          </div>
+        </div>
+      </div>
+
 <script>
     $(document).ready(function(){
+
+        $.get('/users/getProjectReportsAccessbility',function(response){
+            console.log('getProjects response  '+JSON.stringify(response));
+            if(response.length > 0)
+            {
+                    let projectDropdown = document.getElementById('projectname');
+                    response.forEach((eachRecord)=>{
+                            let option = new Option(eachRecord.name,eachRecord.sfid, false, false);
+                            projectDropdown.appendChild(option);
+                    });
+            }
+
+            
+        }).fail(function(jqXHR,status,err){
+            console.log('jqXHR : '+JSON.stringify(jqXHR));
+            console.log('error : '+err);
+        })
+
+
+
 
         $('#spinner').hide();
         $('#spinnerPldForm').hide();
@@ -145,11 +196,11 @@
                                 htmlResponsesTable += '<td>'+eachRecord.name+' </td>';
                                 htmlResponsesTable += '<td>'+dateTime+' </td>';
                                 htmlResponsesTable += '<td><button class="btn btn-primary submitFormForApproval" id="'+eachRecord.sfid+'" >Submit For Approval</a> </td>';
-                                if(eachRecord.status__c == 'Approved' || eachRecord.status__c == 'Rejected' )
+                                if(eachRecord.status__c == 'Approved' || eachRecord.status__c == 'Rejected' || eachRecord.status__c != 'Pending' )
                                   htmlResponsesTable += '<td>'+eachRecord.status__c+'</td>';
                                 else
                                 htmlResponsesTable += '<td></td>';
-                                if(eachRecord.status__c != null && eachRecord.status__c != 'Pending' && eachRecord.status__c != 'Rejected')
+                                if(eachRecord.status__c != null && eachRecord.status__c != 'Pending' )
                                 {
                                   htmlResponsesTable += '<td><a class="btn btn-primary " href="https://llfdev1-llf1.cs74.force.com/responsepdf?Id='+eachRecord.sfid+'" target="_blank" style="color:white;"  >Preview</a> </td>';
                                   htmlResponsesTable += '<td><button class="btn btn-danger deleteResponse" id="'+eachRecord.sfid+'" >Delete</a> </td>';
@@ -245,10 +296,54 @@
                 console.log('selectedProjectId : '+selectedProjectId);
                // alert('selectedProjectId  '+selectedProjectId);
 
-                let option1 = new Option('All','All',false,false);    
+                $.get('/users/getRelatedProjectLibraries',{selectedProjectId: selectedProjectId}, function(response){
+                    console.log('project Libraries Responses : '+JSON.stringify(response));
+                    if(response.length > 0)
+                    {
+                        let select = document.getElementById("projectLibrary");
+                        let length = select.options.length;
+                        for (i = length-1; i >= 0; i--) {
+                        select.options[i] = null;
+                        }   
+
+
+                        let option1 = new Option('All','All',false,false);    
+                        document.getElementById('projectLibrary').appendChild(option1);
+
+
+
+                        response.forEach(function(eachRecord){
+                            let option = new Option(eachRecord.pld_questions__c,eachRecord.sfid,false,false);    
+                            document.getElementById('projectLibrary').appendChild(option);
+                        });
+                    }
+                    else
+                    {
+                      //  document.getElementById('projectLibrary').empty();
+                        let select = document.getElementById("projectLibrary");
+                        let length = select.options.length;
+                        for (i = length-1; i >= 0; i--) {
+                        select.options[i] = null;
+                        }
+                        let option1 = new Option('Select','',true,true);    
+                        document.getElementById('projectLibrary').appendChild(option1);
+                    }
+
+                }).fail(function(jqXHR, status, error){
+                    console.log('jqXHR  : '+JSON.stringify(jqXHR));
+                    console.log('error  : '+error);
+                })
+
+
+
+                //Adding Options
+
+              /*  let option1 = new Option('All','All',false,false);    
                 document.getElementById('projectLibrary').appendChild(option1);
                 let option = new Option('Newest form for testing','a1l0p0000006jDRAAY',false,false);    
-                document.getElementById('projectLibrary').appendChild(option);
+                document.getElementById('projectLibrary').appendChild(option); */
+
+
         })
 
 
